[CoordinatedGraphics][WK2] Correct wrong usage of m_contentPosition variable in the WebView. https://bugs.webkit.org/show_bug.cgi?id=118548

Patch by Eunmi Lee <eunmi15.lee@samsung.com> on 2013-11-28
Reviewed by Noam Rosenthal.

CoordinatedGraphics uses its own scaling logic - contents scaling - and
WebView of CoordinatedGraphics maintains contents position by scaling
with contents scaling factor.
However transformToScene() and updateViewportSize() of WebView regard
the contents position as a non-scaled value, so it should be fixed.

* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::transformToScene):
(WebKit::WebView::updateViewportSize):

Canonical link: https://commits.webkit.org/143115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159864 268f45cc-cd09-0410-ab3c-d52691b4dbfc